// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-pagination should render with _label="Label" _on={} _max=0 _page=4 _hasButtons=false _siblingCount=0 1`] = `
<kol-pagination>
  <template shadowrootmode="open">
    <kol-pagination-wc class="kol-pagination">
      <span aria-live="polite" class="kol-pagination__entries" role="status">
        kol-table-visible-range
      </span>
      <nav aria-label="Label" class="kol-pagination__navigation">
        <ul class="kol-pagination__navigation-list"></ul>
      </nav>
    </kol-pagination-wc>
  </template>
</kol-pagination>
`;

exports[`kol-pagination should render with _label="Label" _on={} _max=2 _page=1 1`] = `
<kol-pagination>
  <template shadowrootmode="open">
    <kol-pagination-wc class="kol-pagination">
      <span aria-live="polite" class="kol-pagination__entries" role="status">
        kol-table-visible-range
      </span>
      <nav aria-label="Label" class="kol-pagination__navigation">
        <ul class="kol-pagination__navigation-list">
          <li>
            <div class="kol-button kol-button--disabled kol-button--hide-label kol-button--normal kol-button--standalone kol-pagination__button kol-pagination__button--first">
              <button aria-label="kol-page-first" class="kol-button__button" disabled="" type="button">
                <span class="kol-button__text kol-span kol-span--hide-label">
                  <span class="kol-span__container">
                    <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-chevron-double-left" role="presentation"></i>
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                  </span>
                </span>
              </button>
              <div class="kol-button__tooltip">
                <div class="kol-tooltip__floating">
                  <div class="kol-tooltip__arrow"></div>
                  <span class="kol-span kol-tooltip__content">
                    <span class="kol-span__container">
                      <span class="kol-span__label">
                        kol-page-first
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </li>
          <li>
            <div class="kol-button kol-button--disabled kol-button--hide-label kol-button--normal kol-button--standalone kol-pagination__button kol-pagination__button--previous">
              <button aria-label="kol-page-back" class="kol-button__button" disabled="" type="button">
                <span class="kol-button__text kol-span kol-span--hide-label">
                  <span class="kol-span__container">
                    <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-chevron-left" role="presentation"></i>
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                  </span>
                </span>
              </button>
              <div class="kol-button__tooltip">
                <div class="kol-tooltip__floating">
                  <div class="kol-tooltip__arrow"></div>
                  <span class="kol-span kol-tooltip__content">
                    <span class="kol-span__container">
                      <span class="kol-span__label">
                        kol-page-back
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </li>
          <li>
            <div class="kol-button kol-button--normal kol-button--standalone kol-pagination__button kol-pagination__button--selected selected">
              <button aria-current="page" aria-description="kol-page 1" class="kol-button__button" type="button">
                <span class="kol-button__text kol-span">
                  <span class="kol-span__container">
                    <span class="kol-span__label">
                      1
                    </span>
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                  </span>
                </span>
              </button>
            </div>
          </li>
          <li>
            <div class="kol-button kol-button--normal kol-button--standalone kol-pagination__button kol-pagination__button--numbers">
              <button aria-description="kol-page 2" class="kol-button__button" type="button">
                <span class="kol-button__text kol-span">
                  <span class="kol-span__container">
                    <span class="kol-span__label">
                      2
                    </span>
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                  </span>
                </span>
              </button>
            </div>
          </li>
          <li>
            <div class="kol-button kol-button--hide-label kol-button--normal kol-button--standalone kol-pagination__button kol-pagination__button--next">
              <button aria-label="kol-page-next" class="kol-button__button" type="button">
                <span class="kol-button__text kol-span kol-span--hide-label">
                  <span class="kol-span__container">
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                    <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-chevron-right" role="presentation"></i>
                  </span>
                </span>
              </button>
              <div class="kol-button__tooltip">
                <div class="kol-tooltip__floating">
                  <div class="kol-tooltip__arrow"></div>
                  <span class="kol-span kol-tooltip__content">
                    <span class="kol-span__container">
                      <span class="kol-span__label">
                        kol-page-next
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </li>
          <li>
            <div class="kol-button kol-button--hide-label kol-button--normal kol-button--standalone kol-pagination__button kol-pagination__button--last">
              <button aria-label="kol-page-last" class="kol-button__button" type="button">
                <span class="kol-button__text kol-span kol-span--hide-label">
                  <span class="kol-span__container">
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                    <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-chevron-double-right" role="presentation"></i>
                  </span>
                </span>
              </button>
              <div class="kol-button__tooltip">
                <div class="kol-tooltip__floating">
                  <div class="kol-tooltip__arrow"></div>
                  <span class="kol-span kol-tooltip__content">
                    <span class="kol-span__container">
                      <span class="kol-span__label">
                        kol-page-last
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </nav>
    </kol-pagination-wc>
  </template>
</kol-pagination>
`;

exports[`kol-pagination should render with _label="Label" _on={} _max=10 _page=10 _boundaryCount=2 _siblingCount=2 1`] = `
<kol-pagination>
  <template shadowrootmode="open">
    <kol-pagination-wc class="kol-pagination">
      <span aria-live="polite" class="kol-pagination__entries" role="status">
        kol-table-visible-range
      </span>
      <nav aria-label="Label" class="kol-pagination__navigation">
        <ul class="kol-pagination__navigation-list">
          <li>
            <div class="kol-button kol-button--hide-label kol-button--normal kol-button--standalone kol-pagination__button kol-pagination__button--first">
              <button aria-label="kol-page-first" class="kol-button__button" type="button">
                <span class="kol-button__text kol-span kol-span--hide-label">
                  <span class="kol-span__container">
                    <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-chevron-double-left" role="presentation"></i>
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                  </span>
                </span>
              </button>
              <div class="kol-button__tooltip">
                <div class="kol-tooltip__floating">
                  <div class="kol-tooltip__arrow"></div>
                  <span class="kol-span kol-tooltip__content">
                    <span class="kol-span__container">
                      <span class="kol-span__label">
                        kol-page-first
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </li>
          <li>
            <div class="kol-button kol-button--hide-label kol-button--normal kol-button--standalone kol-pagination__button kol-pagination__button--previous">
              <button aria-label="kol-page-back" class="kol-button__button" type="button">
                <span class="kol-button__text kol-span kol-span--hide-label">
                  <span class="kol-span__container">
                    <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-chevron-left" role="presentation"></i>
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                  </span>
                </span>
              </button>
              <div class="kol-button__tooltip">
                <div class="kol-tooltip__floating">
                  <div class="kol-tooltip__arrow"></div>
                  <span class="kol-span kol-tooltip__content">
                    <span class="kol-span__container">
                      <span class="kol-span__label">
                        kol-page-back
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </li>
          <li>
            <div class="kol-button kol-button--normal kol-button--standalone kol-pagination__button kol-pagination__button--numbers">
              <button aria-description="kol-page 1" class="kol-button__button" type="button">
                <span class="kol-button__text kol-span">
                  <span class="kol-span__container">
                    <span class="kol-span__label">
                      1
                    </span>
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                  </span>
                </span>
              </button>
            </div>
          </li>
          <li>
            <div class="kol-button kol-button--normal kol-button--standalone kol-pagination__button kol-pagination__button--numbers">
              <button aria-description="kol-page 2" class="kol-button__button" type="button">
                <span class="kol-button__text kol-span">
                  <span class="kol-span__container">
                    <span class="kol-span__label">
                      2
                    </span>
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                  </span>
                </span>
              </button>
            </div>
          </li>
          <li>
            <span aria-hidden="true" class="kol-pagination__separator"></span>
          </li>
          <li>
            <div class="kol-button kol-button--normal kol-button--standalone kol-pagination__button kol-pagination__button--numbers">
              <button aria-description="kol-page 8" class="kol-button__button" type="button">
                <span class="kol-button__text kol-span">
                  <span class="kol-span__container">
                    <span class="kol-span__label">
                      8
                    </span>
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                  </span>
                </span>
              </button>
            </div>
          </li>
          <li>
            <div class="kol-button kol-button--normal kol-button--standalone kol-pagination__button kol-pagination__button--numbers">
              <button aria-description="kol-page 9" class="kol-button__button" type="button">
                <span class="kol-button__text kol-span">
                  <span class="kol-span__container">
                    <span class="kol-span__label">
                      9
                    </span>
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                  </span>
                </span>
              </button>
            </div>
          </li>
          <li>
            <div class="kol-button kol-button--normal kol-button--standalone kol-pagination__button kol-pagination__button--selected selected">
              <button aria-current="page" aria-description="kol-page 10" class="kol-button__button" type="button">
                <span class="kol-button__text kol-span">
                  <span class="kol-span__container">
                    <span class="kol-span__label">
                      10
                    </span>
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                  </span>
                </span>
              </button>
            </div>
          </li>
          <li>
            <div class="kol-button kol-button--disabled kol-button--hide-label kol-button--normal kol-button--standalone kol-pagination__button kol-pagination__button--next">
              <button aria-label="kol-page-next" class="kol-button__button" disabled="" type="button">
                <span class="kol-button__text kol-span kol-span--hide-label">
                  <span class="kol-span__container">
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                    <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-chevron-right" role="presentation"></i>
                  </span>
                </span>
              </button>
              <div class="kol-button__tooltip">
                <div class="kol-tooltip__floating">
                  <div class="kol-tooltip__arrow"></div>
                  <span class="kol-span kol-tooltip__content">
                    <span class="kol-span__container">
                      <span class="kol-span__label">
                        kol-page-next
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </li>
          <li>
            <div class="kol-button kol-button--disabled kol-button--hide-label kol-button--normal kol-button--standalone kol-pagination__button kol-pagination__button--last">
              <button aria-label="kol-page-last" class="kol-button__button" disabled="" type="button">
                <span class="kol-button__text kol-span kol-span--hide-label">
                  <span class="kol-span__container">
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                    <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-chevron-double-right" role="presentation"></i>
                  </span>
                </span>
              </button>
              <div class="kol-button__tooltip">
                <div class="kol-tooltip__floating">
                  <div class="kol-tooltip__arrow"></div>
                  <span class="kol-span kol-tooltip__content">
                    <span class="kol-span__container">
                      <span class="kol-span__label">
                        kol-page-last
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </nav>
    </kol-pagination-wc>
  </template>
</kol-pagination>
`;

exports[`kol-pagination should render with _label="Label" _on={} _max=12 _page=6 _hasButtons={"first":false,"last":false,"next":true,"previous":true} _boundaryCount=0 _siblingCount=1 1`] = `
<kol-pagination>
  <template shadowrootmode="open">
    <kol-pagination-wc class="kol-pagination">
      <span aria-live="polite" class="kol-pagination__entries" role="status">
        kol-table-visible-range
      </span>
      <nav aria-label="Label" class="kol-pagination__navigation">
        <ul class="kol-pagination__navigation-list">
          <li>
            <div class="kol-button kol-button--hide-label kol-button--normal kol-button--standalone kol-pagination__button kol-pagination__button--previous">
              <button aria-label="kol-page-back" class="kol-button__button" type="button">
                <span class="kol-button__text kol-span kol-span--hide-label">
                  <span class="kol-span__container">
                    <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-chevron-left" role="presentation"></i>
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                  </span>
                </span>
              </button>
              <div class="kol-button__tooltip">
                <div class="kol-tooltip__floating">
                  <div class="kol-tooltip__arrow"></div>
                  <span class="kol-span kol-tooltip__content">
                    <span class="kol-span__container">
                      <span class="kol-span__label">
                        kol-page-back
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </li>
          <li>
            <div class="kol-button kol-button--normal kol-button--standalone kol-pagination__button kol-pagination__button--numbers">
              <button aria-description="kol-page 5" class="kol-button__button" type="button">
                <span class="kol-button__text kol-span">
                  <span class="kol-span__container">
                    <span class="kol-span__label">
                      5
                    </span>
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                  </span>
                </span>
              </button>
            </div>
          </li>
          <li>
            <div class="kol-button kol-button--normal kol-button--standalone kol-pagination__button kol-pagination__button--selected selected">
              <button aria-current="page" aria-description="kol-page 6" class="kol-button__button" type="button">
                <span class="kol-button__text kol-span">
                  <span class="kol-span__container">
                    <span class="kol-span__label">
                      6
                    </span>
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                  </span>
                </span>
              </button>
            </div>
          </li>
          <li>
            <div class="kol-button kol-button--normal kol-button--standalone kol-pagination__button kol-pagination__button--numbers">
              <button aria-description="kol-page 7" class="kol-button__button" type="button">
                <span class="kol-button__text kol-span">
                  <span class="kol-span__container">
                    <span class="kol-span__label">
                      7
                    </span>
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                  </span>
                </span>
              </button>
            </div>
          </li>
          <li>
            <span aria-hidden="true" class="kol-pagination__separator"></span>
          </li>
          <li>
            <div class="kol-button kol-button--hide-label kol-button--normal kol-button--standalone kol-pagination__button kol-pagination__button--next">
              <button aria-label="kol-page-next" class="kol-button__button" type="button">
                <span class="kol-button__text kol-span kol-span--hide-label">
                  <span class="kol-span__container">
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                    <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-chevron-right" role="presentation"></i>
                  </span>
                </span>
              </button>
              <div class="kol-button__tooltip">
                <div class="kol-tooltip__floating">
                  <div class="kol-tooltip__arrow"></div>
                  <span class="kol-span kol-tooltip__content">
                    <span class="kol-span__container">
                      <span class="kol-span__label">
                        kol-page-next
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </nav>
    </kol-pagination-wc>
  </template>
</kol-pagination>
`;

exports[`kol-pagination should render with _label="Label" _on={} _max=25 _page=3 _pageSizeOptions=[5,10,20] _pageSize=5 _siblingCount=3 1`] = `
<kol-pagination>
  <template shadowrootmode="open">
    <kol-pagination-wc class="kol-pagination">
      <span aria-live="polite" class="kol-pagination__entries" role="status">
        kol-table-visible-range
      </span>
      <nav aria-label="Label" class="kol-pagination__navigation">
        <ul class="kol-pagination__navigation-list">
          <li>
            <div class="kol-button kol-button--hide-label kol-button--normal kol-button--standalone kol-pagination__button kol-pagination__button--first">
              <button aria-label="kol-page-first" class="kol-button__button" type="button">
                <span class="kol-button__text kol-span kol-span--hide-label">
                  <span class="kol-span__container">
                    <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-chevron-double-left" role="presentation"></i>
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                  </span>
                </span>
              </button>
              <div class="kol-button__tooltip">
                <div class="kol-tooltip__floating">
                  <div class="kol-tooltip__arrow"></div>
                  <span class="kol-span kol-tooltip__content">
                    <span class="kol-span__container">
                      <span class="kol-span__label">
                        kol-page-first
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </li>
          <li>
            <div class="kol-button kol-button--hide-label kol-button--normal kol-button--standalone kol-pagination__button kol-pagination__button--previous">
              <button aria-label="kol-page-back" class="kol-button__button" type="button">
                <span class="kol-button__text kol-span kol-span--hide-label">
                  <span class="kol-span__container">
                    <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--left kolicon-chevron-left" role="presentation"></i>
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                  </span>
                </span>
              </button>
              <div class="kol-button__tooltip">
                <div class="kol-tooltip__floating">
                  <div class="kol-tooltip__arrow"></div>
                  <span class="kol-span kol-tooltip__content">
                    <span class="kol-span__container">
                      <span class="kol-span__label">
                        kol-page-back
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </li>
          <li>
            <div class="kol-button kol-button--normal kol-button--standalone kol-pagination__button kol-pagination__button--numbers">
              <button aria-description="kol-page 1" class="kol-button__button" type="button">
                <span class="kol-button__text kol-span">
                  <span class="kol-span__container">
                    <span class="kol-span__label">
                      1
                    </span>
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                  </span>
                </span>
              </button>
            </div>
          </li>
          <li>
            <div class="kol-button kol-button--normal kol-button--standalone kol-pagination__button kol-pagination__button--numbers">
              <button aria-description="kol-page 2" class="kol-button__button" type="button">
                <span class="kol-button__text kol-span">
                  <span class="kol-span__container">
                    <span class="kol-span__label">
                      2
                    </span>
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                  </span>
                </span>
              </button>
            </div>
          </li>
          <li>
            <div class="kol-button kol-button--normal kol-button--standalone kol-pagination__button kol-pagination__button--selected selected">
              <button aria-current="page" aria-description="kol-page 3" class="kol-button__button" type="button">
                <span class="kol-button__text kol-span">
                  <span class="kol-span__container">
                    <span class="kol-span__label">
                      3
                    </span>
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                  </span>
                </span>
              </button>
            </div>
          </li>
          <li>
            <div class="kol-button kol-button--normal kol-button--standalone kol-pagination__button kol-pagination__button--numbers">
              <button aria-description="kol-page 4" class="kol-button__button" type="button">
                <span class="kol-button__text kol-span">
                  <span class="kol-span__container">
                    <span class="kol-span__label">
                      4
                    </span>
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                  </span>
                </span>
              </button>
            </div>
          </li>
          <li>
            <div class="kol-button kol-button--normal kol-button--standalone kol-pagination__button kol-pagination__button--numbers">
              <button aria-description="kol-page 5" class="kol-button__button" type="button">
                <span class="kol-button__text kol-span">
                  <span class="kol-span__container">
                    <span class="kol-span__label">
                      5
                    </span>
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                  </span>
                </span>
              </button>
            </div>
          </li>
          <li>
            <div class="kol-button kol-button--hide-label kol-button--normal kol-button--standalone kol-pagination__button kol-pagination__button--next">
              <button aria-label="kol-page-next" class="kol-button__button" type="button">
                <span class="kol-button__text kol-span kol-span--hide-label">
                  <span class="kol-span__container">
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                    <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-chevron-right" role="presentation"></i>
                  </span>
                </span>
              </button>
              <div class="kol-button__tooltip">
                <div class="kol-tooltip__floating">
                  <div class="kol-tooltip__arrow"></div>
                  <span class="kol-span kol-tooltip__content">
                    <span class="kol-span__container">
                      <span class="kol-span__label">
                        kol-page-next
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </li>
          <li>
            <div class="kol-button kol-button--hide-label kol-button--normal kol-button--standalone kol-pagination__button kol-pagination__button--last">
              <button aria-label="kol-page-last" class="kol-button__button" type="button">
                <span class="kol-button__text kol-span kol-span--hide-label">
                  <span class="kol-span__container">
                    <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                    <i aria-hidden="true" class="kol-icon kol-icon__icon kol-span__icon kol-span__icon--right kolicon-chevron-double-right" role="presentation"></i>
                  </span>
                </span>
              </button>
              <div class="kol-button__tooltip">
                <div class="kol-tooltip__floating">
                  <div class="kol-tooltip__arrow"></div>
                  <span class="kol-span kol-tooltip__content">
                    <span class="kol-span__container">
                      <span class="kol-span__label">
                        kol-page-last
                      </span>
                      <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </nav>
      <div class="page-size">
        <kol-select-wc _label="kol-entries-per-site" _value="5" class="kol-pagination__page-size-select"></kol-select-wc>
      </div>
    </kol-pagination-wc>
  </template>
</kol-pagination>
`;
